Correct z-index of pic2 so behind navigation background

--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ body {
         .composition__photo--p2 {
           top: -1rem;
           transform: scale(1.3);
-          z-index: 1000; } }
+          z-index: 100; } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
