--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -34,7 +34,7 @@
       @include responsive(tab-port) {
         top: -1rem;    
         transform: scale(1.3);
-        z-index: 1000;
+        z-index: 100;
       }      
     }
     
